--- a/fastpress.html
+++ b/fastpress.html
@@ -8,7 +8,7 @@
   <h1>FastPress</h1>
 
   <div class="player1"></div>
-  <div class="player2"></div>
+  <!-- <div class="player2"></div> -->
 
   <!-- jQuery CDN -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
