added logic for player who get to 10 boxes first wins and resetting the board

--- a/fastpress.html
+++ b/fastpress.html
@@ -6,6 +6,12 @@
 </head>
 <body>
   <h1>FastPress</h1>
+  <p>
+    Player 1 is "Q" on the keyboard, and
+    Player 2 is "P" on the keyboard.
+    Count off on your own and press away,
+    first person with 10 blocks wins!
+  </p>
 
   <div class="player1">Player 1</div>
 </br>
